# theo

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CLAUDE.md  README.md  biome.json  docker-compose.yml  justfile  package.json  pyproject.toml  tsconfig.json
.claude/: settings.json
.claude/agents/: agent-sdk-expert.md  agentic-ai-scholar.md  code-reviewer.md  embedding-specialist.md  event-auditor.md  plan-executor.md  postgres-expert.md  resilience-engineer.md  sdk-engineer.md  security-reviewer.md  theo-conversation.md  theo-interface.md  theo-memory.md  theo-platform.md  typescript-architect.md
.claude/commands/: check.md  db-migrate.md  db-optimize.md  otel-check.md  otel-dashboard.md
.claude/memory/: merge-pipeline-2026-03-28.md  pr-review-2026-03-28.md
.claude/rules/: database.md  events.md  memory.md  telemetry.md  testing.md
docker/: init-test-db.sh
docs/: README.md  foundation.md
docs/decisions/: anthropic-llm-client.md  approval-gateway.md  auto-edge-creation.md  autonomy-classification.md  budget-controls.md  context-assembly.md  contradiction-detection.md  conversation-loop.md  core-memory-operations.md  deliberation-schema.md  deliberative-reasoning-engine.md  dev-scripts.md  edge-operations.md  enhanced-context-assembly.md  episode-operations.md  event-bus-namespaces.md  graceful-degradation.md  hybrid-retrieval.md  index.md  intent-queue-evaluator.md  lifecycle-integration.md  memory-tool-integration.md  metacognitive-monitor.md  node-operations.md  onboarding-conversation.md  openobserve-provisioning.md  privacy-filter.md  reasoning-transparency.md  self-model.md  speed-classification-ratchet.md  structured-user-model.md  telegram-commands.md  telegram-gate.md  voice-input.md
infra/: provision.sh
infra/alerts/: bus-handler-failure.alert.json  circuit-breaker-opened.alert.json  health-check-degraded.alert.json  high-llm-error-rate.alert.json  retry-queue-growing.alert.json
infra/dashboards/: conversation.dashboard.json  llm.dashboard.json  memory.dashboard.json  overview.dashboard.json  resilience.dashboard.json  telegram.dashboard.json
ops/: com.theo.agent.plist  install.sh
ops/observability/: docker-compose.yaml
src/: config.ts  engine.ts  errors.ts  index.ts
src/chat/: bootstrap.ts  context.ts  engine.ts  hooks.ts  onboarding.ts  prompt.ts  session.ts  subagents.ts  types.ts
src/db/: migrate.ts  pool.ts
src/degradation/: state.ts
src/events/: bus.ts  goals.ts  handlers.ts  ids.ts  log.ts  mcp.ts  queue.ts  reflexes.ts  types.ts  upcasters.ts
src/gates/: types.ts
src/goals/: commands.ts  executive.ts  handlers.ts  lease.ts  mcp.ts  projection.ts  reconsideration.ts  recovery.ts  repository.ts  stopping.ts  types.ts
src/ideation/: run.ts
src/mcp/: tool-helpers.ts
src/memory/: abstraction.ts  auto_edges.ts  cloud_audit.ts  consolidation.ts  contradiction.ts  core.ts  egress.ts  embeddings.ts  episodic.ts  forgetting.ts  llm.ts  privacy.ts  propagation.ts  retrieval.ts  salience.ts  self_model.ts  skills.ts  tools.ts  trust.ts  types.ts  user_model.ts
src/proposals/: commands.ts  store.ts  workspace.ts
src/reflex/: dispatch.ts  handler.ts
src/scheduler/: builtin.ts  cron.ts  runner.ts  store.ts  tools.ts  types.ts
src/selfupdate/: healthcheck.ts  rollback.ts  slo_gate.ts
src/telemetry/: context.ts  exporters.ts  gauges.ts  index.ts  labels.ts  logger.ts  metrics.ts  profiling.ts  projector.ts  redact.ts  resource.ts  semconv.ts  synthetic.ts  tracer.ts
src/theo/: __init__.py  __main__.py  autonomy.py  budget.py  config.py  context.py  conversation.py  deliberation.py  embeddings.py  errors.py  llm.py  resilience.py  telemetry.py  transcription.py
src/util/: hash.ts  timers.ts
tests/: config.test.ts  conftest.py  engine.test.ts  helpers.ts  runtime.test.ts  setup.ts  test_auto_edges.py  test_autonomy.py  test_budget.py  test_bus.py  test_config.py  test_context.py  test_contradictions.py  test_conversation.py  test_core_memory.py  test_deliberation.py  test_deliberation_engine.py  test_edges.py  test_embeddings.py  test_episodes.py  test_intent.py  test_llm.py  test_main.py  test_memory_tools.py  test_metacognition.py  test_nodes.py  test_onboarding.py  test_privacy.py  test_proposals.py  test_resilience.py  test_retrieval.py  test_self_model.py  test_stream.py  test_telegram.py  test_transcription.py  test_user_model.py
tests/chat/: bootstrap.test.ts  context.test.ts  engine.test.ts  hooks.test.ts  onboarding.test.ts  prompt.test.ts  session.test.ts  subagents.test.ts
tests/db/: ideation.integration.test.ts  memory-schema.test.ts  migrate.test.ts  phase13b.integration.test.ts  pool.test.ts  reflex.integration.test.ts  webhooks.integration.test.ts
tests/degradation/: state.test.ts
tests/events/: bus.test.ts  log.test.ts  types.test.ts  upcasters.test.ts
tests/gates/: cli.test.ts
tests/goals/: commands.test.ts  executive.test.ts  executive_egress.test.ts  fairness.test.ts  lease.test.ts  mcp.test.ts  poison.test.ts  projection.test.ts  reconsideration.test.ts  recovery.test.ts  security.test.ts
tests/ideation/: run.test.ts
tests/memory/: abstraction.test.ts  auto_edges.test.ts  cloud_audit.test.ts  consolidation.test.ts  contradiction.test.ts  core.test.ts  egress.test.ts  egress_audit.test.ts  embeddings.test.ts  episodic.test.ts  forgetting.test.ts  privacy.test.ts  propagation.test.ts  retrieval.test.ts  salience.test.ts  self_model.test.ts  skills.test.ts  tools.test.ts  trust.test.ts  user_model.test.ts
tests/proposals/: payload_hash.test.ts  workspace.test.ts
tests/reflex/: dispatch.test.ts
tests/scheduler/: cron.test.ts  runner.test.ts  store.test.ts  tools.test.ts
tests/selfupdate/: healthcheck.test.ts  rollback.test.ts  slo_gate.test.ts
tests/telemetry/: alerts.test.ts  boundary.test.ts  bus_wrapper_integration.test.ts  context.test.ts  dashboards.test.ts  exemplars.test.ts  exporters.test.ts  labels.test.ts  logger.test.ts  metrics.test.ts  otel_sdk_compat.test.ts  projector.test.ts  redact.test.ts  resource.test.ts  semconv.test.ts  spans_bus.test.ts  (+2 more)
(+183 files in other folders)
