[project]
name = "theo"
version = "0.1.0"
description = "Personal AI agent"
readme = "README.md"
authors = [{ name = "Filipe Lima", email = "me@fpl0.io" }]
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31",
    "pgvector>=0.4.2",
    "mlx>=0.31",
    "numpy>=2.4",
    "huggingface-hub>=1.7",
    "tokenizers>=0.22",
    "pydantic>=2.12",
    "pydantic-settings>=2.13",
    "opentelemetry-api>=1.40",
    "opentelemetry-sdk>=1.40",
    "opentelemetry-exporter-otlp-proto-http>=1.40",
    "opentelemetry-instrumentation-asyncpg>=0.61b0",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "ty>=0.0.24",
    "pytest>=9",
    "pytest-asyncio>=0.24",
]

[project.scripts]
theo = "theo.__main__:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 99

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle — we'll add docstring rules later if needed
    "ANN",     # flake8-annotations — ty handles typing
    "COM812",  # trailing comma — conflicts with ruff formatter
    "ISC001",  # single-line implicit string concat — conflicts with formatter
    "T20",     # flake8-print — we use print/logging intentionally
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "PLR2004"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic_settings.BaseSettings"]

[tool.ty]
rules = { all = "error" }

[tool.ty.environment]
python-version = "3.14"
python-platform = "darwin"

# pydantic-settings injects field values from environment variables at runtime;
# ty cannot model this and flags the constructor as missing required args.
[[tool.ty.overrides]]
include = ["src/theo/config.py"]
rules = { missing-argument = "ignore" }

# pydantic-settings constructors accept str for SecretStr and dynamic kwargs
# like _env_file that ty cannot model.
[[tool.ty.overrides]]
include = ["tests/test_config.py"]
rules = { invalid-argument-type = "ignore", missing-argument = "ignore", unknown-argument = "ignore" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
